@@ -19,10 +19,14 @@ package org.apache.nutch.metadata;
 import java.io.DataInput;
 import java.io.DataOutput;
 import java.io.IOException;
+import java.util.Collections;
 import java.util.Enumeration;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Properties;
+import java.util.Vector;
+
 import org.apache.hadoop.io.Text;
 import org.apache.hadoop.io.Writable;
 
@@ -209,9 +213,13 @@ DublinCore, HttpHeaders, Nutch, Office {
     for (int i = 0; i < names.length; i++) {
       Text.writeString(out, names[i]);
       values = getValues(names[i]);
-      out.writeInt(values.length);
-      for (int j = 0; j < values.length; j++) {
-        Text.writeString(out, values[j]);
+      // @since NUTCH-406: get the set
+      // of non-null values, and work with
+      // them to avoid NPE exception
+      String [] nonNullVals = getNonNullValues(values);
+      out.writeInt(nonNullVals.length);
+      for (int j = 0; j < nonNullVals.length; j++) {
+          Text.writeString(out, nonNullVals[j]);
       }
     }
   }
@@ -227,5 +235,20 @@ DublinCore, HttpHeaders, Nutch, Office {
       }
     }
   }
+  
+  private String[] getNonNullValues(String[] values) {
+		if (values == null) {
+			return new String[0];
+		}
+
+		List<String> nonNull = new Vector<String>();
+		for (int i = 0; i < values.length; i++) {
+			if (values[i] != null && !values[i].equals("")) {
+				nonNull.add(values[i]);
+			}
+		}
+
+		return nonNull.toArray(new String[nonNull.size()]);
+	}
 
 }
